--- a/style.css
+++ b/style.css
@@ -47,13 +47,12 @@ html {
 .section-1-heading {
   font-size: 6rem;
   font-weight: 700;
-  color: #fff;
-  background-color: #f9061a;
+  color: #FBAE3C;
   padding: 0 3rem;
   margin-bottom: 5rem;
   text-transform: uppercase;
   letter-spacing: 1rem;
-  border-bottom: 0.3rem solid #fff;
+  /* border-bottom: 0.3rem solid #fff; */
   text-shadow: 0.2rem 0.2rem 1rem #555;
   transform: skew(-10deg);
 }
@@ -63,7 +62,7 @@ html {
   height: 25rem;
   object-fit: contain;
   border-radius: 50%;
-  border: 0.7rem dotted #f9061a;
+  border: 0.7rem dotted #FBAE3C;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 0.5rem;
   opacity: 0.9;
@@ -72,7 +71,7 @@ html {
 .person-name {
   font-size: 2rem;
   color: #fff;
-  background-color: #f9061a;
+  background-color: #FBAE3C;
   margin: 5rem 0;
   padding: 0.5rem 3rem;
   letter-spacing: 0.3rem;
@@ -96,7 +95,7 @@ html {
 .navbar {
   width: 100%;
   height: 4rem;
-  background-color: #f9061a;
+  background-color: #FBAE3C;
   box-shadow: 0.2rem 0.2rem 0.5rem #555;
   position: absolute;
   z-index: 300;
@@ -188,7 +187,7 @@ html {
 .progress-percent {
   width: 0;
   height: 100%;
-  background-color: #f9061a;
+  background-color: #FBAE3C;
   border-radius: 0.3rem;
   transition: width 0.5s 0.5s ease-in-out;
 }
@@ -285,7 +284,7 @@ html {
 
 .project-technologies {
   font-size: 1.8rem;
-  color: #f9061a;
+  color: #FBAE3C;
 }
 
 .project-img {
@@ -302,7 +301,7 @@ html {
   font-weight: 500;
   color: #333;
   letter-spacing: 0.1rem;
-  border: 0.3rem solid #f9061a;
+  border: 0.3rem solid #FBAE3C;
   padding: 0 1rem;
   background-color: #fff;
   position: absolute;
@@ -347,7 +346,7 @@ html {
   margin: 0.5rem 0;
   background-color: #eef;
   font-size: 1.5rem;
-  border: 0.2rem solid #f9061a;
+  border: 0.2rem solid #FBAE3C;
   color: #555;
 }
 
@@ -358,7 +357,7 @@ html {
 }
 
 .contact-form .contact-form-btn {
-  background-color: #f9061a;
+  background-color: #FBAE3C;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1rem;
@@ -382,7 +381,7 @@ html {
 .social-media-link {
   margin: 0 2rem;
   padding: 0.7rem;
-  background-color: #f9061a;
+  background-color: #FBAE3C;
   border-radius: 0.5rem;
   display: inline-block;
 }
@@ -401,159 +400,6 @@ html {
 }
 
 /* End of Section 5 */
-.contact {
-  padding-top: 5px;
-}
-
-.contact .info {
-  width: 100%;
-  background: #fff;
-}
-
-.contact .info i {
-  font-size: 20px;
-  color: #5fcf80;
-  float: left;
-  width: 44px;
-  height: 44px;
-  background: #ecf9f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  transition: all 0.3s ease-in-out;
-}
-
-.contact .info h4 {
-  padding: 0 0 0 60px;
-  font-size: 22px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  color: #37423b;
-}
-
-.contact .info p {
-  padding: 0 0 0 60px;
-  margin-bottom: 0;
-  font-size: 14px;
-  color: #657a6d;
-}
-
-.contact .info .email,
-.contact .info .phone {
-  margin-top: 40px;
-}
-
-.contact .info .email:hover i,
-.contact .info .address:hover i,
-.contact .info .phone:hover i {
-  background: #5fcf80;
-  color: #fff;
-}
-
-.contact .php-email-form {
-  width: 100%;
-  background: #fff;
-}
-
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br+br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 4px;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input:focus,
-.contact .php-email-form textarea:focus {
-  border-color: #5fcf80;
-}
-
-.contact .php-email-form input {
-  height: 44px;
-}
-
-.contact .php-email-form textarea {
-  padding: 10px 12px;
-}
-
-.contact .php-email-form button[type=submit] {
-  background: #5fcf80;
-  border: 0;
-  padding: 10px 35px;
-  color: #fff;
-  transition: 0.4s;
-  border-radius: 50px;
-}
-
-.contact .php-email-form button[type=submit]:hover {
-  background: #3ac162;
-}
-
-@-webkit-keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
 
 /* Responsive */
 @media (max-width: 1200px) {
